# Project-NUEVO-TsaoG4

docs/lab_manual/Lab1_ROS2/: main.tex
docs/lab_manual/Notes_byJulia/: GITHUB_GUIDE.md  text_whatver
firmware/arduino/: arduino.ino
firmware/arduino/src/: ISRScheduler.cpp  ISRScheduler.h  Scheduler.cpp  Scheduler.h  config.h  utility.cpp  utility.h
firmware/arduino/src/modules/: DCMotorBringup.cpp  DCMotorBringup.h  MessageCenter.cpp  MotorControlCoordinator.cpp  MotorControlCoordinator.h  StatusReporter.cpp  StatusReporter.h
nuevo_ui/backend/nuevo_bridge/: auth.py  config.py  runtime.py
nuevo_ui/backend/nuevo_bridge/tests/: test_runtime.py
nuevo_ui/frontend/src/components/: DCMotorSection.tsx  StepperSection.tsx  UserIOSection.tsx
nuevo_ui/frontend/src/components/stepper/: StepperPlot.css  (+1 more)
nuevo_ui/frontend/src/store/: robotStore.ts
ros2_ws/docker/: Dockerfile.robot  docker-compose.rpi.yml  enter_ros2.sh
ros2_ws/src/: Manipulation
ros2_ws/src/manipulation/: stepper_drive_test.py
ros2_ws/src/robot/: setup.cfg
ros2_ws/src/robot/robot/: __init__.py  hardware_map.py  main.py  my_main.py  path_planner.py  robot.py  robot_node.py  util.py
ros2_ws/src/robot/robot/examples/: obstacle_avoidance.py  obstacle_avoidance2.py
ros2_ws/src/robot/robot/examples/legacy/: position_fusion_demo.py
ros2_ws/src/robot/robot/mainTRIAL/: main_copy.py  main_pureGPSobsAV.py  main_purepursuitGPS.py  main_working.py
ros2_ws/src/robot/test/: test_path_planner.py  test_robot_api.py
ros2_ws/test/: test_uart_arduino.py
tlv_protocol/: generate_tlv_types.py
